site/src/content/docs/zh-cn/docs/v0.3/concepts/semantic-layer.mdx
---
slug: zh-cn/docs/v0.3/concepts/semantic-layer
title: 语义层
description: 用 Python declarations 定义 agents 可依赖的名称、定义、字段和 guardrails。
---

语义层用于向 Marivo 说明数据的**含义**。你用 Python 声明 datasources、entities、
dimensions 和 metrics；agents 通过 **semantic ref**（形如 `sales.revenue` 的限定名）
引用这些对象，而不是直接使用原始表名和列名。

每个对象都遵循三条规则：

- **Python declarations 是契约。** 被装饰的函数和 builder 调用，是名称、定义和形状的
  唯一来源。
- **Ibis expressions 是执行语言。** Decorator body 返回 ibis expression，不返回原始
  SQL 字符串。
- **SQL 文本只是元数据。** 需要 SQL（用于 parity 校验）时，将它放在
  `provenance=ms.from_sql(sql=..., dialect=...)` 中，不作为可执行 body。

日常 authoring 会用到两个 namespace：

```python
import marivo.datasource as md   # connections (md.duckdb, md.ref, ...)
import marivo.semantic as ms     # meaning (ms.entity, ms.metric, ...)
```

## 命名规则

每个对象都归属于一个 **domain**，并通过限定 ref 引用：

- Domain 级对象：`<domain>.<object>` —— 例如 `sales.revenue`、`sales.orders`。
- Entity 级对象（dimensions 和 measures）：`<domain>.<entity>.<field>` —— 例如
  `sales.orders.region`。

一个 project 由一组声明文件组成。Datasources 在 `models/datasources/` 下声明一次；
semantics 放在 `models/semantic/<domain>/` 下，每个 domain 有一个 `_domain.py`：

```text
your-project/
  marivo.toml
  models/
    datasources/
      warehouse.py          # md.duckdb(name="warehouse", ...)
    semantic/
      sales/
        _domain.py          # ms.domain(name="sales", owner="Mina Zhang") + entities, metrics, ...
```

在多仓库语义层场景中，每个业务域仓库仍保持相同的 authored `models/` 布局，
中央分析 project 只需要引用这些 root：

```toml
[semantic]
layer_paths = ["../finance-domain/models"]
```

Marivo 会先加载中央 project 的 `models/`，再按配置顺序加载外部 `models/` root。
所有 datasource、domain 与 semantic object 会进入同一个 catalog，因此名称必须全局唯一。
`marivo doctor`、`catalog.preview`、`ms.verify_object` 与 analysis session 都会按同一组
配置 roots 解析 datasource-backed semantic object。

## Semantic refs

每个 semantic 对象都由一个 **semantic ref** 标识。它是类型化、不可变的句柄，同时携带限定名
和对象种类。Ref 在 authoring 阶段和分析循环中使用同一套类型：`ms.entity(...)` 调用、
`catalog.get(...).ref` 查找，以及分析 intent 参数，都属于同一个 `SemanticRef` 族。

### `SemanticRef` 基类

所有 ref 共享两个只读属性：

| 属性 | 类型 | 含义 |
| --- | --- | --- |
| `.id` | `str` | 限定 semantic id（如 `"sales.revenue"`）。 |
| `.kind` | `SemanticKind` | 对象种类——以下八个值之一。 |

`str(ref)` 返回 `.id`，因此 ref 在接受 semantic id 的读取/查询 API 中仍然方便。Authoring 参数必须使用 Ref 对象，不能传裸字符串。
相等性和哈希基于 `(type, id)`，所以同子类同 id 的两个 ref 可互换。

### 按 kind 区分的子类

每个 `SemanticKind` 值对应一个具体的 ref 子类：

| Kind | 子类 | 由谁返回 | 可调用? |
| --- | --- | --- | --- |
| `domain` | `DomainRef` | `ms.domain(...)` | 否 |
| `datasource` | `DatasourceRef` | `md.ref(...)` | 否 |
| `entity` | `EntityRef` | `ms.entity(...)` | 否 |
| `dimension` | `DimensionRef` | 直接列用 `ms.dimension_column(...)`，表达式用 `@ms.dimension` | 是——在 metric body 中 |
| `time_dimension` | `TimeDimensionRef` | 直接列用 `ms.time_dimension_column(...)`，表达式用 `@ms.time_dimension` | 是——在 metric body 中 |
| `measure` | `MeasureRef` | 直接列用 `ms.measure_column(...)`，表达式用 `@ms.measure` | 是——在 metric body 中 |
| `metric` | `MetricRef` | `ms.aggregate(...)`、`ms.count(...)`、`@ms.metric`、`ms.ratio(...)` 等 | 否 |
| `relationship` | `RelationshipRef` | `ms.relationship(...)` | 否 |

可调用的 field ref（`DimensionRef`、`MeasureRef`、`TimeDimensionRef`）在 metric body
内被调用时，会解析为 ibis expression。其他 ref 如果被误调用会抛出教学性错误：它们是身份令牌，
不是装饰器。

### 一个族，一个访问器

因为 authoring ref 和 catalog ref 属于同一类型族，authoring ref 可以直接传给分析 intent，
不需要额外包装：

```python
revenue = ms.aggregate(name="revenue", measure=amount, agg="sum")
# revenue 是一个 MetricRef——直接传给 observe：
frame = session.observe(revenue, time_scope={...})
```

Catalog 的 `catalog.get("metric.sales.revenue").ref` 返回同一个 `MetricRef` 子类。不存在
`.ref.ref` 链，authoring 和 analysis 之间也不会出现 ref 类型不匹配。

### 工厂与归一化器

- `mv.make_ref(id, kind)` —— 内部使用；已从公开接口中移除。
- `as_ref_id(value)` —— 从 `SemanticRef`、`SemanticObject` 或纯 `str` 中提取 `.id` 字符串。
  对字符串保持宽容：原始 id 会直接通过。

## `ai_context`：人与 agent 之间的契约

每个 semantic object 和 datasource 都接受可选的 `ai_context` 参数，并通过 `ms.ai_context(...)`
构造。业务含义和 guardrails 放在这里；agent 使用对象前会读取这部分上下文。所有参数都是可选的，
但未知的关键字参数会在调用时被 Python 拒绝。

| 字段 | 类型 | 必填 | 默认 | 含义 |
| --- | --- | --- | --- | --- |
| `business_definition` | `str` | 否 | `None` | 用一两句话说明对象的业务含义。 |
| `guardrails` | `list[str]` | 否 | `[]` | agent 必须遵守的规则：必要的过滤、排除项、范围限制。 |
| `synonyms` | `list[str]` | 否 | `[]` | 别名，方便 agent 解析自然语言引用。 |
| `examples` | `list[str]` | 否 | `[]` | 该对象能回答的示例问题或表述。 |
| `instructions` | `str` | 否 | `None` | 关于如何（以及如何不）使用该对象的直接指引。 |
| `owner_notes` | `str` | 否 | `None` | 来自人类 owner 的备注：来源、注意事项、已知问题。 |

```python
ai_context=ms.ai_context(
    business_definition="Gross order amount before refunds.",
    guardrails=["Validate refund exclusions before using as net revenue."],
    synonyms=["sales", "gmv"],
    examples=["What was revenue by region last week?"],
)
```

## 数据源

Datasources 在 `models/datasources/*.py` 中声明，每种 backend 对应一个 typed helper。
helper 会注册连接。Semantic 文件通过 `md.ref("datasource.warehouse")` 以 kind-qualified ref 引用
datasource。

```python
# models/datasources/warehouse.py
import marivo.datasource as md
import marivo.semantic as ms

md.duckdb(
    name="warehouse",
    path="warehouse.duckdb",
    ai_context=ms.ai_context(
        business_definition="Local DuckDB warehouse for sales analysis.",
        guardrails=["Use only for development or approved local analysis."],
    ),
)
```

每个 helper（`md.duckdb`、`md.mysql`、`md.postgres`、`md.trino`、`md.clickhouse`）都共享以下参数：

| 参数 | 类型 | 必填 | 默认 | 含义 |
| --- | --- | --- | --- | --- |
| `name` | `str` | 是 | — | 全局 datasource 名称（字母、数字、`_`、`-`）。供 `md.ref(name)` 使用。 |
| `ai_context` | `AiContextValue` | 否 | `None` | 面向 agent 的上下文，通过 `ms.ai_context(...)` 构造。 |
| `extra` | `dict` | 否 | `None` | typed helper 未建模的、罕见的 JSON 安全 ibis 关键字参数。 |

各 backend 特有的参数：

| Helper | 必填 | 可选 |
| --- | --- | --- |
| `md.duckdb` | — | `path`（默认 `":memory:"`）、`read_only`（默认 `False`） |
| `md.mysql` | `host`、`database` | `port`（3306）、`autocommit`、`user_env`、`password_env` |
| `md.postgres` | `host`、`database` | `port`（5432）、`schema`、`autocommit`、`user_env`、`password_env` |
| `md.trino` | `host`、`catalog` | `port`（8080）、`schema`、`source`、`timezone`、`http_scheme`、`client_tags`、`session_properties`、`user_env`、`auth_env` |
| `md.clickhouse` | `host` | `port`（9000 / 9440 secure）、`database`、`secure`、`settings`、`user_env`、`password_env` |

ClickHouse datasource 默认关闭 clickhouse-connect 自动生成的 session id，这样 analysis
缓存 backend 时，重复查询或并发查询不会共享同一个 ClickHouse server session lock。
如果 datasource 需要临时表等 ClickHouse session state，可以显式传
`extra={"autogenerate_session_id": True}`。`settings={...}` 用于 server/query
settings；Ibis/clickhouse-connect client keyword arguments 放在 `extra={...}`。

:::caution[凭据是引用，绝不是明文]
敏感字段以 `*_env` 引用的形式声明，指向环境变量 —— `user_env="TRINO_USER"`、
`password_env="MYSQL_PASSWORD"`。把 secret 明文写进 datasource 字段会报错。Marivo 通过
`os.environ` → `~/.marivo/secrets.toml` 解析 `*_env` 值，并在一次通过验证的
`md.test(...)` 往返之后把解析到的 secret 缓存到那里。
:::

```python
# models/datasources/lake.py
import marivo.datasource as md

md.trino(
    name="lake",
    host="trino.example.internal",
    catalog="hive",
    user_env="TRINO_USER",
    auth_env="TRINO_AUTH",
)
```

## 数据域

`ms.domain(...)` 打开一个 namespace。每个 `_domain.py` 调用一次。它返回一个
`DomainRef`，也可以作为 `domain=` 传入，用来覆盖同级文件中对象的活动 domain。

| 参数 | 类型 | 必填 | 默认 | 含义 |
| --- | --- | --- | --- | --- |
| `name` | `str` | 是 | — | Domain namespace，例如 `"sales"`。对象成为 `<name>.<object>`。 |
| `owner` | `str` | 是 | — | 负责人姓名，负责该 domain 的语义正确性与质量，例如 `"Mina Zhang"`。 |
| `default` | `bool` | 否 | `True` | 为 `True` 时，本文件中的 decorators 在未传 `domain=` 时解析到该 domain。 |
| `ai_context` | `AiContextValue` | 否 | `None` | 面向 agent 的上下文，通过 `ms.ai_context(...)` 构造。 |

```python
import marivo.semantic as ms

ms.domain(name="sales", owner="Mina Zhang")
```

## 实体

Entity 表示一个物理源（一张表或一个文件）及其 primary key。dimensions、measures 和 metrics
都依附在 entity 上。

| 参数 | 类型 | 必填 | 默认 | 含义 |
| --- | --- | --- | --- | --- |
| `name` | `str` | 是 | — | Entity 名称。成为 `<domain>.<name>`。 |
| `datasource` | `DatasourceRef` | 是 | — | `md.ref("datasource.warehouse")`。 |
| `source` | source builder | 是 | — | `ms.table(...)`、`ms.parquet(...)` 或 `ms.csv(...)`。 |
| `primary_key` | `list[str]` | 否 | `None` | 构成 primary key 的列名。 |
| `versioning` | `ms.snapshot \| ms.validity` | 否 | `None` | Snapshot 或 SCD2 validity 版本控制（见下）。 |
| `domain` | `DomainRef` | 否 | 文件默认 | 覆盖活动 domain。 |
| `ai_context` | `AiContextValue` | 否 | `None` | 面向 agent 的上下文，通过 `ms.ai_context(...)` 构造。 |

```python
warehouse = md.ref("datasource.warehouse")

orders = ms.entity(
    name="orders",
    datasource=warehouse,
    source=ms.table("orders"),
    primary_key=["order_id"],
    ai_context=ms.ai_context(business_definition="One row per order."),
)
```

### Source builders

| Builder | 必填 | 可选 | 用于 |
| --- | --- | --- | --- |
| `ms.table(name)` | `name` | `database` | datasource 中的一张表（Trino/MySQL 用 `database="schema"`）。 |
| `ms.parquet(path)` | `path` | `hive_partitioning`、`columns` | Parquet 文件（通常经 DuckDB）。 |
| `ms.csv(path)` | `path` | `header`、`delimiter`、`columns` | CSV 文件（通常经 DuckDB）。 |

### Versioning（可选）

对于行会随时间变化的 entity，需要声明如何读取当前状态：

- `ms.snapshot(partition_field, grain="day", timezone=None, format=None)` ——
  按天分区的快照；`partition_field` 必须是 `DimensionRef` 或 `TimeDimensionRef`。
- `ms.validity(valid_from, valid_to, interval, open_end, timezone=None)` ——
  SCD2 validity 区间；`valid_from` 和 `valid_to` 必须是 `DimensionRef` 或 `TimeDimensionRef`。`interval` 为 `"closed_open"`（`[from, to)`）或
  `"closed_closed"`；`open_end` 列出表示“仍然有效”的哨兵值（例如 SQL `NULL` 用
  `(None,)`，或 `("9999-12-31",)`）。

## 维度

维度是用于分组或过滤的分类属性。直接物理列使用 `ms.dimension_column(...)`；需要表达式
（例如 `table.region.upper()`）时，使用 `@ms.dimension` decorator，其 body 返回一个针对
entity 表的 ibis expression。

| 参数 | 类型 | 必填 | 默认 | 含义 |
| --- | --- | --- | --- | --- |
| `name` | `str` | 是 | — | Dimension 名称。成为 `<domain>.<entity>.<name>`。 |
| `entity` | `EntityRef` | 是 | — | 所属 entity。 |
| `column` | `str` | 是 | — | Entity 表上的物理列名。 |
| `domain` | `DomainRef` | 否 | 文件默认 | 覆盖活动 domain。 |
| `ai_context` | `AiContextValue` | 否 | `None` | 面向 agent 的上下文，通过 `ms.ai_context(...)` 构造。 |

```python
region = ms.dimension_column(
    name="region",
    entity=orders,
    column="region",
    ai_context=ms.ai_context(business_definition="Sales reporting region."),
)
```

## 时间维度

时间维度是携带 grain 和解析元数据的特殊 dimension。**只有 time dimension 才能作为
`session.observe` 的时间轴。**

| 参数 | 类型 | 必填 | 默认 | 含义 |
| --- | --- | --- | --- | --- |
| `name` | `str` | 是 | — | Dimension 名称。 |
| `entity` | `EntityRef` | 是 | — | 所属 entity。 |
| `column` | `str` | 是 | — | Entity 表上的物理列名。 |
| `granularity` | grain 字面量 | 是 | — | `year`、`quarter`、`month`、`week`、`day`、`hour`、`minute` 或 `second` —— 查询有意义的最细粒度。 |
| `parse` | parse 变体 | 否 | `None` | 源列如何变成时间值（见下）。原生时间列可省略——分析时自动推断 parse 变体。 |
| `is_default` | `bool` | 否 | `False` | 当 entity 有多个时间轴时，标记默认时间轴。省略 `time_dimension=` 时 `observe` 会使用它。 |
| `domain` | `DomainRef` | 否 | 文件默认 | 覆盖活动 domain。 |
| `ai_context` | `AiContextValue` | 否 | `None` | 面向 agent 的上下文，通过 `ms.ai_context(...)` 构造。 |

### Parse 变体

`parse=` 值声明列的物理编码。省略时，分析会根据列的 ibis dtype 自动推断 parse 变体（原生
`date`、`datetime`、`timestamp` 列无需显式指定 parse）。对于 string 或 integer 列，需提供
`ms.strptime(format)` 或 `ms.hour_prefix(prefix)`。该变体必须与 `granularity` 兼容（例如
hour 粒度需要带时间的格式）。

| Builder | 源列是… | 关键参数 |
| --- | --- | --- |
| *（省略 `parse`）* | 原生时间列 | — |
| `ms.datetime()` | 原生 `datetime` | `timezone`（IANA）、`sample_interval` |
| `ms.timestamp()` | 原生 `timestamp` | `timezone`（IANA）、`sample_interval` |
| `ms.strptime(format)` | 需要解析的 string/integer | `timezone`、`sample_interval` |
| `ms.hour_prefix(prefix)` | 仅含小时的分区 | `sample_interval` —— `prefix` 是提供日期的 day 粒度 `TimeDimensionRef` |

`timezone` 默认为 datasource 引擎时区；只有当列的挂钟含义不同时才设置它（例如 `"UTC"`）。
形如 `(5, "minute")` 的 `sample_interval` 标记一个被周期采样的时间轴，供 semi-additive
fold 使用。

对于 time-series 和 panel frame，`bucket_start` 始终是 report timezone 下的 bucket
标签，并以 timezone-naive timestamp 或 date 输出。例如 `report_timezone="Asia/Shanghai"`
时，上海业务日的第一个小时桶显示为 `2026-06-20 00:00:00`，而不是等价的 UTC instant。

```python
# Day partition stored as the string "20260131"
log_date = ms.time_dimension_column(
    name="log_date",
    entity=orders,
    column="dt",
    granularity="day",
    parse=ms.strptime("%Y%m%d"),
    is_default=True,
)

# Native UTC timestamp, usable for sub-day buckets
event_ts = ms.time_dimension_column(
    name="event_ts",
    entity=orders,
    column="event_ts",
    granularity="minute",
    parse=ms.timestamp(timezone="UTC"),
)
```

## 度量

Measure 是你打算聚合的行级数量事实（例如金额或数量）。直接物理列使用
`ms.measure_column(...)`；需要基于一个或多个列的表达式时使用 `@ms.measure`。Measure
携带 additivity 和可选的 unit。

| 参数 | 类型 | 必填 | 默认 | 含义 |
| --- | --- | --- | --- | --- |
| `name` | `str` | 是 | — | Measure 名称。成为 `<domain>.<entity>.<name>`。 |
| `entity` | `EntityRef` | 是 | — | 所属 entity。 |
| `column` | `str` | 是 | — | Entity 表上的物理列名。 |
| `additivity` | additivity 值 | 是 | — | `"additive"`、`"non_additive"` 或 `ms.semi_additive(...)`。 |
| `unit` | `str` | 否 | `None` | UCUM unit token：`"USD"`、`"CNY"`、`"%"`、`"ms"`、`"{order}"`。 |
| `domain` | `DomainRef` | 否 | 文件默认 | 覆盖活动 domain。 |
| `ai_context` | `AiContextValue` | 否 | `None` | 面向 agent 的上下文，通过 `ms.ai_context(...)` 构造。 |

```python
amount = ms.measure_column(
    name="amount",
    entity=orders,
    column="amount",
    additivity="additive",
    unit="CNY",
)
```

## 指标

Metric 是 agent 分析时依赖的可信数值，可以直接用于分析。Marivo 提供几种 authoring 形态，
按数值的计算方式选择。

### 来自 measure 的简单 metric —— `ms.aggregate`

聚合一个 measure。无需 body；additivity 从 measure 继承。

| 参数 | 类型 | 必填 | 默认 | 含义 |
| --- | --- | --- | --- | --- |
| `name` | `str` | 是 | — | Metric 名称。 |
| `measure` | `MeasureRef` | 是 | — | 要聚合的 measure。 |
| `agg` | 聚合方式 | 是 | — | `"sum"`、`"mean"`、`"min"`、`"max"` 等。 |
| `fold` | fold | 否 | `None` | semi-additive measure 的 time-fold 覆盖。 |
| `unit` | `str` | 否 | 继承 | 覆盖从 measure 推导的 unit。 |
| `domain` / `ai_context` | — | 否 | — | 同其他对象。 |

```python
revenue = ms.aggregate(name="revenue", measure=amount, agg="sum")
```

### Count metric —— `ms.count`

需要统计 entity 行数时使用 `ms.count`，不要为了计行数额外声明冗余 measure。这个 helper
只接受 ref，并会从 entity ref 推断 metric 所属 domain。

```python
order_count = ms.count(name="order_count", entity=orders, ai_context=ms.ai_context(business_definition="订单总数。"))
```

### 来自 ibis body 的 tier-2 自定义 metric —— `@ms.metric`

当 metric 无法用 `ms.aggregate(...)`、`ms.count(...)` 或派生 metric builder 表达时，
才使用这个 escape hatch。Body 返回一个 ibis 聚合；`additivity` 由你显式声明。

| 参数 | 类型 | 必填 | 默认 | 含义 |
| --- | --- | --- | --- | --- |
| `name` | `str` | 否 | 函数名 | Metric 名称。 |
| `entities` | `list[EntityRef]` | 是 | — | Body 读取的 entities。 |
| `additivity` | additivity 值 | 是 | — | `"additive"`、`"non_additive"` 或 `ms.semi_additive(...)`。 |
| `root_entity` | `EntityRef` | 否 | 单个 entity | 当 `entities` 多于一个时必填。 |
| `fanout_policy` | `"block" \| "aggregate_then_join"` | 否 | `"block"` | 如何处理跨 entity 连接的 fan-out。 |
| `unit` | `str` | 否 | `None` | UCUM unit token。 |
| `provenance` | `SqlProvenance` | 否 | `None` | 用于 parity 校验的 `ms.from_sql(sql=..., dialect=...)`。 |
| `domain` / `ai_context` | — | 否 | — | 同其他对象。 |

```python
@ms.metric(
    entities=[orders],
    additivity="additive",
    name="revenue",
    provenance=ms.from_sql(
        sql="SELECT SUM(amount) AS revenue FROM orders",
        dialect="duckdb",
    ),
    ai_context=ms.ai_context(business_definition="Gross order amount before refunds."),
)
def revenue(table):
    return table.amount.sum()
```

### 派生 metrics —— `ms.ratio` / `ms.weighted_average` / `ms.linear`

派生 metric 由其他 metrics 组合而成，不需要 body；计算完全来自组成成分。

| Builder | 必填 | 计算 |
| --- | --- | --- |
| `ms.ratio(name, numerator, denominator)` | 两个 ref | `numerator / denominator`（如客单价、各类比率） |
| `ms.weighted_average(name, value, weight)` | 两个 ref | 加权平均；之后 `attribute` 拆分 mix 与 rate |
| `ms.linear(name, add, subtract)` | `add`（共 ≥2 项） | `add` 之和减去 `subtract`（如 `net = gross - refunds`） |

它们也都接受 `unit`、`domain` 和 `ai_context`。

```python
net_revenue = ms.linear(name="net_revenue", add=[gross_revenue], subtract=[refunds])
aov = ms.ratio(name="aov", numerator=total_amount, denominator=orders_count)
```

### 累计 metrics —— `ms.cumulative`

当业务问题是"截至 bucket t 累计了多少"时使用 `ms.cumulative(...)`。
base 必须是使用 `sum`、`count` 或 `count_distinct` 的 tier-1 `ms.aggregate(...)` 或 `ms.count(...)` metric。
累计锚点是全部历史：observe 窗口裁剪展示行，但不会重置累计值。

| 参数 | 类型 | 必填 | 默认 | 含义 |
| --- | --- | --- | --- | --- |
| `name` | `str` | 是 | — | 语义 metric 名称。 |
| `base` | `MetricRef` | 是 | — | 使用 `sum`、`count` 或 `count_distinct` 的 tier-1 简单聚合 metric。 |
| `over` | `TimeDimensionRef \| None` | 否 | `None` | 累计时间轴。除非 base root entity 只有一个时间维度，否则需显式传入。 |
| `unit` / `domain` / `ai_context` | — | 否 | — | 同其他 metric。 |

```python
user_id = ms.measure_column(name="user_id", entity=events, column="user_id", additivity="non_additive")
active_users = ms.aggregate(name="active_users", measure=user_id, agg="count_distinct")
cumulative_active_users = ms.cumulative(
    name="cumulative_active_users",
    base=active_users,
    over=event_time,
)
```

对于 `count_distinct` base metric，累计值使用首次出现语义：每个去重实体在最早出现的 bucket
中计入，因此累计值单调非递减。累计 metric 可作为 ratio 组成成分——用 `ms.ratio(...)` 组合累计
分子和分母可得到累计比率。

### Additivity 与 provenance 辅助器

- `ms.semi_additive(over, fold)` —— 用于在大多数轴上可加、但需要在某个时间轴上折叠的
  snapshot/status 事实。`over` 必须是 `@ms.time_dimension(...)` 返回的状态时间
  dimension ref；`fold` 为 `"last"`、`"first"`、`"mean"`、`"max"` 或
  `("percentile", 0.95)`。
- `ms.from_sql(sql, dialect)` —— 把 SQL 作为**仅 provenance** 附加，用于启用
  `ms.parity_check(...)`。它永远不会作为 metric body 执行。

```python
snapshot_date = ms.time_dimension_column(
    name="snapshot_date",
    entity=inventory_daily,
    column="snapshot_date",
    granularity="day",
)

on_hand_units = ms.measure_column(
    name="on_hand_units",
    entity=inventory_daily,
    column="on_hand_units",
    additivity=ms.semi_additive(over=snapshot_date, fold="last"),
)
```

## 关系

Relationship 声明两个 entity 如何 join，使 metrics 和 dimensions 能够跨越这两个 entity。
Keys 使用 dimension ref，而不是原始列名。

| 参数 | 类型 | 必填 | 默认 | 含义 |
| --- | --- | --- | --- | --- |
| `name` | `str` | 是 | — | Relationship 名称。 |
| `from_entity` | `EntityRef` | 是 | — | 源 entity。 |
| `to_entity` | `EntityRef` | 是 | — | 目标 entity。 |
| `keys` | `list[JoinKey]` | 是 | — | 一个或多个 `ms.join_on(from_key, to_key)` 配对。 |
| `domain` / `ai_context` | — | 否 | — | 同其他对象。 |

```python
ms.relationship(
    name="orders_to_customers",
    from_entity=orders,
    to_entity=customers,
    keys=[ms.join_on(order_customer_id, customer_id)],
)
```

## 先发现，再准备

对 datasource-backed 语义对象，先 inspect 表和分区元信息，再用显式分区范围收集有界
discovery 证据。查阅 `md.help("authoring")` 了解分阶段 datasource 工作流
（register/test/inspect 再 discover -> settle -> author -> verify），查阅
`ms.help("authoring")` 了解 semantic 依赖阶梯，查阅 `md.help("ai_context")` 了解共享的
`ms.ai_context(...)` 契约：

```python
warehouse = md.ref("datasource.warehouse")
orders = md.table("orders")

md.inspect_table(warehouse, orders).show()
md.inspect_partitions(warehouse, orders).show()

scope = md.partition({"dt": "20260629"})

entity_evidence = md.discover_entity(warehouse, orders, scope=scope)
dimension_evidence = md.discover_dimensions(
    warehouse,
    orders,
    scope=scope,
)
measure_evidence = md.discover_measures(
    warehouse,
    orders,
    columns=("amount",),
    scope=scope,
)

entity_evidence.show()
dimension_evidence.show()
measure_evidence.show()
```

Discovery 返回有界证据、signals 和 issues；它不会替你决定业务含义、单位、additivity，
或自动创建语义对象。Agent 通过 `.show()` / `.render()` 阅读 discovery 证据；
具体 result class 和内部 evidence 字段不是公开 authoring 输入。`ms.help(...)`
告诉 agent 哪些参数必须确定（静态 authoring 契约），discovery 提供运行时证据。
一次只 author 一个对象，然后运行 `ms.verify_object(...)`。

## 加载与就绪检查

声明完成后，加载 catalog 并检查它：

```python
import marivo.semantic as ms

catalog = ms.load()                       # SemanticCatalog
catalog.list("domain").show()                     # top-level domains
catalog.list("metric").show()                     # just metrics across all domains
revenue = catalog.get("metric.sales.revenue")           # one object
region = catalog.get("dimension.sales.orders.region")      # also an object
```

在任何分析之前，运行**就绪检查**。这是把未完整声明的对象挡在分析之外的结构性门禁：

```python
report = ms.readiness()
if report.status == "blocked":
    report.show()                         # blockers, with the next step for each
```

:::caution[分析前必须通过就绪检查]
project 可以在 readiness 仍被阻塞时成功 `load()`。在把任何 ref 传给分析 session 之前，
先解决 `report.show()` 列出的 blockers。
:::

另外两个检查支持 authoring：

- `ms.richness()` —— 建议性的覆盖度/深度报告；永不阻塞。
- `ms.parity_check("sales.revenue")` —— 用 metric 的 `provenance` SQL 运行并比对结果。
  需要 `provenance=ms.from_sql(...)`。

就绪检查如何判断“是否就绪”，见 [就绪检查](/zh-cn/docs/v0.3/concepts/readiness/)。
分析如何记录结论，见 [证据链](/zh-cn/docs/v0.3/concepts/evidence/)。
然后继续阅读 [分析流程](/zh-cn/docs/v0.3/concepts/analysis-workflow/)。
